[tool.poetry]
name = "txmm"
version = "0.1.0"
description = ""
authors = ["Gijs Hendriksen <info@gijshendriksen.nl>"]

[tool.poetry.dependencies]
python = "^3.7"
praw = "^6.4"
nltk = "^3.4"
numpy = "^1.18"
scikit-learn = "^0.22.1"
gensim = "^3.8"
xgboost = "^0.90.0"
tqdm = "^4.44.1"
matplotlib = "^3.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
